--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "adamwathan/laravel-preset",
-    "description": "Adam Wathan's Laravel Frontend Preset",
+    "name": "anmartini/laravel-preset",
+    "description": "Andrea Martini's Laravel Preset",
     "keywords": ["laravel", "preset"],
     "license": "MIT",
     "require": {
@@ -8,13 +8,13 @@
     },
     "autoload": {
         "psr-4": {
-            "NothingWorks\\LaravelPreset\\": "src/"
+            "AnMartini\\LaravelPreset\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "NothingWorks\\LaravelPreset\\PresetServiceProvider"
+                "AnMartini\\LaravelPreset\\PresetServiceProvider"
             ]
         }
     }
